Fix error where navbar menus weren't displaying properly on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -110,6 +110,10 @@ nav i.material-icons {
     width: 50%;
 }
 
+.sidenav li>a {
+    padding: 0 24px!important;
+}
+
 
 
 /* search bar */
